[project]
name = "list2term"
dynamic = ["version"]
authors = [
  { name="Emilio Reyes", email="soda480@gmail.com" },
]
description = "A lightweight tool to mirror and dynamically update a Python list in your terminal, with built-in support for concurrent output (asyncio / threading / multiprocessing)."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "colorama",
    "cursor"
]

[tool.setuptools]
packages = ["list2term"]

[project.urls]
"Homepage" = "https://github.com/soda480/list2term"

[project.optional-dependencies]
dev = [
    "build",
    "flake8",
    "mock",
    "radon",
    "bandit",
    "coverage",
    "coverage-badge",
    "twine"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "list2term.__version__"}